<resources>
    <string name="app_name">Fundoo Notes</string>
    <string name="register">Register</string>
    <string name="new_to_application">New to here? <u> Create an Account</u></string>
    <string name="login">Login</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log Out</string>
    <string name="trash">Trash</string>
    <string name="archive">Archive</string>
    <string name="reminder">Reminder</string>
    <string name="notes">Notes</string>
    <string name="fundoo_notes">Fundoo Notes</string>
    <string name="add_note">Add Note</string>
    <string name="or">OR</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="type_here">Type Here</string>
    <string name="save_note">Save</string>
    <string name="create_note">Create Note</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="description">Description</string>
    <string name="enter_description_here">Enter Description Here</string>
    <string name="user_name">User</string>
    <string name="user_email">Email</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="note_title_display">Note Title</string>
    <string name="note_description_display">Note Description</string>
    <string name="update">Update</string>
    <string name="search_notes">Search Notes</string>
    <string name="label">Label</string>
    <string name="save_label_button">Save Label</string>
    <string name="all_labels">All Labels</string>
    <string name="save_label">Save Label</string>
</resources>