<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/note"
            android:icon="@drawable/ic_baseline_note_add_24"
            android:title="@string/notes"/>

        <item android:id="@+id/reminder"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="@string/reminder"/>

        <item android:id="@+id/archive"
            android:icon="@drawable/ic_baseline_archive_24"
            android:title="@string/archive"/>

        <item android:id="@+id/label"
            android:icon="@drawable/ic_baseline_archive_24"
            android:title="@string/label"/>

        <item android:id="@+id/delete"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/trash"/>

        <item android:id="@+id/logOut"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout"/>
    </group>
</menu>