<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/label_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="455dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_margin="14dp"/>

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold|italic"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/textViewDescription"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/description"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/enter_description_here"
                android:paddingTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/saveNoteButton"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:padding="15dp"
                android:text="Save"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>